RESOLVED FIXED6074
WebKit+SVG and FireFox disagree on invalid "transform" handling
https://bugs.webkit.org/show_bug.cgi?id=6074
Summary WebKit+SVG and FireFox disagree on invalid "transform" handling
Eric Seidel (no email)
Reported 2005-12-14 01:39:38 PST
WebKit+SVG and FireFox disagree on invalid "transform" handling After my fixes as part of 6061, there is now one case in which WebKit+SVG and FireFox still disagree on transform handling. WebKit+SVG will respect any valid transforms up-to, but not including the first invalid transform instruction in a transform="..." attribute. FireFox will ignore the entire transform attribute if any of the transform instructions are invalid.
Attachments
Test case (596 bytes, image/svg+xml)
2005-12-14 01:41 PST, Eric Seidel (no email)
no flags
First attempt (17.46 KB, patch)
2006-12-04 13:29 PST, Rob Buis
no flags
Better patch (23.57 KB, patch)
2006-12-06 12:27 PST, Rob Buis
darin: review+
Eric Seidel (no email)
Comment 1 2005-12-14 01:41:07 PST
Created attachment 5075 [details] Test case Safari+SVG "passes" this test and FireFox "fails". Eventually we should resolve this discrepancy. The w3c does not specify which should be correct, however I may ask them to as part of Tiny 1.2 last call.
Ian 'Hixie' Hickson
Comment 2 2005-12-28 13:44:38 PST
Per SVG Tiny 1.2, the entire attribute should be ignored. TESTCASE: http://www.hixie.ch/tests/adhoc/svg/transform/001.xml
Rob Buis
Comment 3 2006-12-04 13:29:01 PST
Created attachment 11729 [details] First attempt This patch makes us match FF behaviour here. Cheers, Rob.
Rob Buis
Comment 4 2006-12-06 12:27:10 PST
Created attachment 11753 [details] Better patch I had one big logic error in SVGTextElement.cpp, fixed now. Also added updated results for transform-ignore-after-invalid.svg. Finally some code cleanups. Cheers, Rob.
Darin Adler
Comment 5 2006-12-07 15:02:20 PST
Comment on attachment 11753 [details] Better patch Looks good. r=me
Rob Buis
Comment 6 2006-12-08 00:38:47 PST
Landed in r18074.
Note You need to log in before you can comment on or make changes to this bug.