        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=6074
        WebKit+SVG and FireFox disagree on invalid "transform" handling

        Test for parsing failure on transform attribute and clear the transform
        list upon failure to match FF behaviour.



Canonical link: https://commits.webkit.org/15163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18074 268f45cc-cd09-0410-ab3c-d52691b4dbfc