WebCore/ksvg2/svg/SVGTextElement.cpp
@@ -59,9 +59,11 @@ void SVGTextElement::parseMappedAttribute(MappedAttribute* attr)
 
         ExceptionCode ec = 0;
         localTransforms->clear(ec);
-        
-        SVGTransformable::parseTransformAttribute(localTransforms, attr->value());
-        updateLocalTransform(localTransforms);
+
+        if (!SVGTransformable::parseTransformAttribute(localTransforms, attr->value()))
+            localTransforms->clear(ec);
+        else
+            updateLocalTransform(localTransforms);
     } else
         SVGTextPositioningElement::parseMappedAttribute(attr);
 }
