WebCore/ksvg2/svg/SVGTransformable.h
@@ -42,7 +42,7 @@ namespace WebCore {
 
         virtual void updateLocalTransform(SVGTransformList*) = 0;
 
-        static void parseTransformAttribute(SVGTransformList*, const AtomicString& transform);
+        static bool parseTransformAttribute(SVGTransformList*, const AtomicString& transform);
         SVGMatrix* getCTM(const SVGElement*) const;
         SVGMatrix* getScreenCTM(const SVGElement*) const;
     };
